EmbeddedRidBag test is fixed.